[DevTools] Fix area screenshot issues

- Minimum size is set to 5x5 pixels.
- Non-left button clicks reset the screenshot mode.

Bug: 791139, 789962
Change-Id: I748ef50a8068617204e574d5e7fb1e3284cc09af
Reviewed-on: https://chromium-review.googlesource.com/c/1368659
Commit-Queue: Alexei Filippov <alph@chromium.org>
Reviewed-by: Alexei Filippov <alph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615308}
Former-commit-id: 74485beee0cb47708f8ffc7560b53139ab5278de